--- a/index.html
+++ b/index.html
@@ -6,8 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
     <script src="/script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <header class="header">
+        <div class="head">
+            <h1>Rock, Paper, Scissors</h1>
+        </div>
+        <div class="intro">
+            <h3>Pass The Time With A Friendly Game Of Rock, Paper, Scissors!</h3>
+            <p>If you believe chance is a game for the unenlightened, there is a secret on this page that may be of use to you..</p>
+        </div>
+    </header>
+
+    <div class="actionField">
+        <div class="playerField">
+
+        </div>
+        <div class="compField">
+
+        </div>
+    </div>
+
+    <div class="selectionField">
+        <div class="rock">
+
+        </div>
+        <div class="paper">
+
+        </div>
+        <div class="scissors">
+
+        </div>
+    </div>
+
+    <div class="contextField">
+
+    </div>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
