HTML layout satisfactory, CSS assigned to most static elements

--- a/index.html
+++ b/index.html
@@ -20,33 +20,49 @@
         </div>
     </header>
 
-    <div class="actionField">
-        <div class="playerField">
-
+    <div class="gameContainer">
+        <div class="actionField">
+            <div class="playerField">
+                <div class="playerImg">
+                    <img src="./images/human.png" alt="">
+                </div>
+            </div>
+            <div class="compField">
+                <div class="compImg">
+                    <img src="./images/robot.png" alt="">
+                </div>
+            </div>
         </div>
-        <div class="compField">
 
+        <div class="selectionField">
+            <div class="rock">
+
+            </div>
+            <div class="paper">
+
+            </div>
+            <div class="scissors">
+
+            </div>
         </div>
-    </div>
 
-    <div class="selectionField">
-        <div class="rock">
+        <div class="contextField">
+            <div class="contextBox">
 
+            </div>
+            <div class="tallyBox">
+                <div class="playerTally">
+
+                </div>
+                <div class="compTally">
+
+                </div>
+            </div>
         </div>
-        <div class="paper">
-
-        </div>
-        <div class="scissors">
-
-        </div>
-    </div>
-
-    <div class="contextField">
-
     </div>
 
     <footer>
-
+        <h4>©Justin Farrow, 2023</h4>
     </footer>
 
 </body>
