linked game logic to user input through buttons, added slection icoms, winner is displayed by a change of colour in field

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
-    <script src="/script.js"></script>
+    <script src="/script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,13 +36,13 @@
 
         <div class="selectionField">
             <div class="rock">
-
+                <input type="image" src="./images/rock.png" id="rock">
             </div>
             <div class="paper">
-
+                <input type="image" src="./images/paper.png" id="paper">
             </div>
             <div class="scissors">
-
+                <input type="image" src="./images/scissors.png" id="scissors">
             </div>
         </div>
 
