--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header class="header">
         <div class="head">
             <h1>Rock, Paper, Scissors</h1>
+            <button class="reset">Reset</button>
         </div>
         <div class="intro">
             <h3>Pass The Time With A Friendly Game Of Rock, Paper, Scissors!</h3>
@@ -62,7 +63,7 @@
     </div>
 
     <footer>
-        <h4>©Justin Farrow, 2023</h4>
+        <button class="secret"><h4>©Justin Farrow, 2023</h4></button>
     </footer>
 
 </body>
