--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
-    <script src="/script.js" defer></script>
+    <script src="https://github.com/JAFarrow/TOP_Rock-Paper-Scissors/blob/7e1f90c26ed5cfa4f666026f478395cde9820716/script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
